[package]
name = "cw-poc-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terraswap-factory = { version = "0.0.0", path = "./mocks/mock_terraswap/terraswap_factory" }
terraswap-pair = { version = "0.0.0", path = "./mocks/mock_terraswap/terraswap_pair" }
terraswap-token = { version = "0.0.0", path = "./mocks/mock_terraswap/terraswap_token" }
cw2 = { version = "0.8" }
cw20 = { version = "0.8" }
cosmwasm-bignumber = "2.2"
cosmwasm-std = { version = "0.16" }
cosmwasm-storage = { version = "0.16" }
cw-storage-plus = { version = "0.8" }
cw-controllers = { version = "0.8" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
terra-cosmwasm = "2.2"
terraswap = "2.4.0"
thiserror = { version = "1.0.21" }
terra-multi-test = {git="https://github.com/astroport-fi/terra-plus", rev="b3991b9b109accf445fec086ce9792b197be6ca4", package = "terra-multi-test"}
terra-mocks = {git ="https://github.com/terra-money/cosmwasm-contracts.git", rev = "b25f4ac2d7bddaa3a18838cfe51d18e1ae855dcd", package = "terra-mocks"}
cw20-base = { version = "0.8", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = "0.16.0"
